# clinsim_ai

./: .gitignore  ClinSim_AI_Architecture v2.docx  README.md  pyproject.toml
backend/: .env.example  dependencies.py  main.py  requirements.txt
backend/app/: config.py  dependencies.py  main.py  models.py
backend/app/cli/: build_foundation.py  generate_cases.py
backend/app/core/: llm.py  rag.py  scoring.py  session_manager.py
backend/app/data/: loader.py  parser.py
backend/app/generation/: clinical_validator.py  models.py  prompts.py  template_extractor.py  variation_generator.py
backend/app/prompts/: discharge_parser.py  patient_dialogue.py
backend/app/rag/: chunker.py  indexer.py
backend/tests/: test_chunker.py  test_cli_generate.py  test_clinical_validator.py  test_config.py  test_dataset_joins.py  test_discharge_parser.py  test_generation_models.py  test_indexer.py  test_labs_endpoint.py  test_llm.py  test_loader.py  test_models.py  test_parser.py  test_patient_dialogue.py  test_prompts.py  test_rag_service.py  test_scoring.py  test_session_manager.py  test_template_extractor.py  test_variation_generator.py
backend/tests/integration/: test_full_flow.py  test_generation_api.py
docs/: deployment.md
docs/plans/: 2026-03-07-clinsim-ai-implementation.md  2026-03-07-clinsim-ai-spec-design.md
frontend/: .env.local.example  package-lock.json  package.json
frontend/scripts/: generate-labs-data.js
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/data/: labs.ts  mock_session.json
frontend/src/lib/: api.ts  (+3 more)
(+20 files in other folders)
